--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   </script> -->
   
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>Obodugo Rapheal - Frontend Engineer from Nigeria</title>
+  <title>Obodugo Rapheal - Frontend Engineer from Nigeria 🇳🇬</title>
 </head>
 
 <body>
