--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="google-site-verification" content="bA7GM8KNfhbcw_qY_pXua6lQyS6qiXKBBA9S8aGiDPM" />
   <script src="https://raw.githubusercontent.com/uzairfarooq/arrive/master/minified/arrive.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js">
   </script>
